[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zivonpay"
version = "1.0.0"
description = "Official Python SDK for ZivonPay Payment Aggregator"
authors = [{name = "ZivonPay", email = "support@zivonpay.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
keywords = ["zivonpay", "payment", "upi", "sdk"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "requests>=2.31.0",
    "requests-toolbelt>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4.0", "black>=23.0.0", "mypy>=1.0.0"]

[project.urls]
Homepage = "https://zivonpay.com"
Documentation = "https://docs.zivonpay.com"
Repository = "https://github.com/zivonpay/python-sdk"
